# Flameshot-Print-Screen

./: .gitignore  .yarnrc.yml  Cargo.toml  README.md  biome.json  bun.lockb  package.json  rustfmt.toml  tsconfig.json
src/: index.ts  main.rs
src/class/: App.ts
src/constant/: Paths.ts
src/interface/: Config.ts
src/schema/: Config.ts  PSResponse.ts
