[package]
name = "flameshot-print-screen"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "Print-Screen-Uploader"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
opt-level = 3

[dependencies]
home = "0.5.11"
log = "0.4.27"
rand = "0.9.1"
reqwest = { version = "0.12.15", features = ["blocking", "json", "multipart"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
simplelog = "0.12.2"
time = "0.3.47"
