[package]
name = "flameshot-print-screen"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "Print-Screen-Uploader"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
opt-level = 3

[dependencies]
home = "0.5.12"
log = "0.4.29"
rand = "0.10.0"
reqwest = { version = "0.13.2", features = ["blocking", "json", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
simplelog = "0.12.2"
time = "0.3.47"
